# server/src/api/habits/routes.ts
@@ -1,17 +1,32 @@
 import { FastifyPluginAsync } from 'fastify';
 import { deleteHabit, insertHabit, selectAllHabits } from './queries';
-import { FromSchema } from 'json-schema-to-ts';
+
 import {
-   getHabitSchema,
-   deleteHabitSchema,
+   HabitsResponseType,
+   habitsResponseSchema,
+} from './schemas/habitsResponseSchema';
+import {
+   CreateHabitType,
    createHabitSchema,
-} from './schemas';
+} from './schemas/createHabitSchema';
+import {
+   DeleteHabitParamsType,
+   deleteHabitParamsSchema,
+} from './schemas/deleteHabitParamsSchema';
 
 const habitsRoutes: FastifyPluginAsync = async (instance, opts) => {
    //get all habits route
-   instance.get<GetAllHabitsRoute>(
+   instance.get<{ Reply: { 200: HabitsResponseType } }>(
       '/habits',
-      { schema: getHabitSchema },
+      {
+         schema: {
+            operationId: 'getAllHabits',
+            tags: ['habits'],
+            response: {
+               200: habitsResponseSchema,
+            },
+         },
+      },
       async (req, res) => {
          const userId = req.session.userId;
          const habits = await selectAllHabits(userId);
@@ -20,41 +35,36 @@ const habitsRoutes: FastifyPluginAsync = async (instance, opts) => {
    );
 
    //create habit route
-   instance.post<CreateHabitRoute>(
+   instance.post<{ Body: CreateHabitType }>(
       '/habits',
-      { schema: createHabitSchema },
+      {
+         schema: {
+            tags: ['habits'],
+            operationId: 'createHabit',
+            body: createHabitSchema,
+         },
+      },
       async (req, res) => {
-         req.body;
          await insertHabit({ ...req.body, userId: req.session.userId });
          res.send();
       }
    );
 
    //delete habit route
-   instance.delete<DeleteHabitRoute>(
+   instance.delete<{ Params: DeleteHabitParamsType }>(
       '/habits/:habitId',
       {
-         schema: deleteHabitSchema,
+         schema: {
+            operationId: 'deleteHabit',
+            tags: ['habits'],
+            params: deleteHabitParamsSchema,
+         },
       },
       async (req, res) => {
          await deleteHabit(req.params.habitId);
          res.send();
       }
    );
-};
-
-type GetAllHabitsRoute = {
-   Reply: {
-      200: FromSchema<(typeof getHabitSchema)['response']['200']>;
-   };
-};
-
-type CreateHabitRoute = {
-   Body: FromSchema<(typeof createHabitSchema)['body']>;
-};
-
-type DeleteHabitRoute = {
-   Params: FromSchema<(typeof deleteHabitSchema)['params']>;
 };
 
 export default habitsRoutes;
