# server/src/api/habits/schemas/createHabitSchema.ts
@@ -1,43 +1,41 @@
-const createHabitSchema = {
-   tags: ['habits'],
-   operationId: 'createHabit',
-   body: {
-      type: 'object',
-      properties: {
-         name: {
+import { FromSchema, JSONSchema } from 'json-schema-to-ts';
+
+export const createHabitSchema = {
+   type: 'object',
+   properties: {
+      name: {
+         type: 'string',
+      },
+      description: {
+         type: 'string',
+      },
+      category: {
+         type: 'string',
+      },
+      trackingStartDate: {
+         type: 'string',
+         format: 'date',
+      },
+      repeatDays: {
+         type: 'array',
+         minItems: 1,
+         maxItems: 7,
+         items: {
             type: 'string',
-         },
-         description: {
-            type: 'string',
-         },
-         category: {
-            type: 'string',
-         },
-         trackingStartDate: {
-            type: 'string',
-            format: 'date',
-         },
-         repeatDays: {
-            type: 'array',
-            minItems: 1,
-            maxItems: 7,
-            items: {
-               type: 'string',
-               enum: [
-                  'monday',
-                  'tuesday',
-                  'wednesday',
-                  'thursday',
-                  'friday',
-                  'saturday',
-                  'sunday',
-               ],
-            },
+            enum: [
+               'monday',
+               'tuesday',
+               'wednesday',
+               'thursday',
+               'friday',
+               'saturday',
+               'sunday',
+            ],
          },
       },
-      required: ['name', 'repeatDays', 'trackingStartDate'],
-      additionalProperties: false,
    },
-} as const;
+   required: ['name', 'repeatDays', 'trackingStartDate'],
+   additionalProperties: false,
+} as const satisfies JSONSchema;
 
-export default createHabitSchema;
+export type CreateHabitType = FromSchema<typeof createHabitSchema>;
